methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:24: error: type mismatch;
 found   : Unit
 required: Boolean
    colonne()
           ^